--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -29,14 +30,18 @@
     "husky": "^8.0.0",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
+    "react-native-svg-transformer": "^1.1.0",
     "typescript": "^5.1.3"
   },
   "private": true,
   "eslintConfig": {
-    "extends": "universe/native"
+    "extends": "universe/native",
+    "globals": {
+      "__dirname": true
+    }
   },
   "lint-staged": {
-    "{*.ts,*.tsx}": "eslint --fix",
+    "{*.js,*.ts,*.tsx}": "eslint --fix",
     "{*.svg,*.html}": "prettier --write"
   }
 }
