feat(navigation): header for sub screens

--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
   "private": true,
   "eslintConfig": {
     "extends": "universe/native",
+    "rules": {
+      "no-unused-vars": "error"
+    },
     "globals": {
       "__dirname": true
     }
