--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agave-app",
+  "name": "bloom",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -7,7 +7,10 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "build:dev": "npx eas-cli@latest build --profile development",
+    "build:preview": "npx eas-cli@latest build --profile preview",
+    "build:prod": "npx eas-cli@latest build --profile production"
   },
   "dependencies": {
     "@react-native-community/datetimepicker": "7.2.0",
@@ -24,7 +27,9 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
-    "react-native-uuid": "^2.0.1"
+    "react-native-uuid": "^2.0.1",
+    "expo-updates": "~0.18.13",
+    "expo-dev-client": "~2.4.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
