feat(app) add maps and some fixes

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-uuid": "^2.0.1",
     "expo-sqlite": "~11.3.3",
-    "expo-image-picker": "~14.3.2"
+    "expo-image-picker": "~14.3.2",
+    "react-native-maps": "1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
