--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-uuid": "^2.0.1",
     "expo-sqlite": "~11.3.3",
     "expo-image-picker": "~14.3.2",
-    "react-native-maps": "1.7.1"
+    "react-native-maps": "1.7.1",
+    "expo-location": "~16.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
