--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,7 @@
   "singleQuote": true,
   "bracketSameLine": true,
   "trailingComma": "es5",
+  "endOfLine": "auto",
   "overrides": [
     {
       "files": ["*.svg"],
