--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-view-shot": "3.7.0",
     "expo-print": "~12.4.2",
     "expo-image-manipulator": "~11.3.0",
-    "expo-av": "~13.4.1"
+    "expo-av": "~13.4.1",
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
